--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-client-cookies": "^1.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
