--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cookies-next": "^5.0.2",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
-    "next-client-cookies": "^1.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
